# test-ar1s_minecraft_launcher

./: .gitignore  README.md  package-lock.json
Ar1s_Launcher/: package-lock.json  package.json
Ar1s_Launcher/src/: App.vue  main.ts  style.css
Ar1s_Launcher/src-tauri/: Cargo.toml  tauri.conf.json
Ar1s_Launcher/src-tauri/capabilities/: default.json
Ar1s_Launcher/src-tauri/src/: auth.rs  download.rs  error.rs  java.rs  launcher.rs  lib.rs  main.rs  models.rs
Ar1s_Launcher/src-tauri/versions/versions/: version.json
Ar1s_Launcher/src/stores/: settings.ts
Ar1s_Launcher/src/views/: DownloadView.vue  HomeView.vue  SettingsView.vue
